worked on image

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
   <li><a href="#">LinkedIn</a></li>
   </ul></div>
   <div class="attribution">
-    Coded by <a href="#oviesalvay">oviesalvay</a>.
+    Coded by 
+    <a href="#"> oviesalvay</a>.
   </div>
 </footer>
 </body>
